<resources>
    <!-- Strings de datos estáticos -->
    <string name="app_name">Escuela Arcade</string>
    <string name="logo">Logo</string>
    <string name="home_fragment">Cursos</string>
    <string name="statistics_fragment">Estadísticas</string>
    <string name="profile_fragment">Perfil</string>
    <string name="nav_menu">Menú de navegación</string>
    <string name="cursos_activos">Cursos activos</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="sync_dialog">"No se han podido obtener datos de sincronización. ¿Desea intentar de nuevo?"</string>
    <string name="usuario">usuario</string>
    <string name="email">email</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="datos_no_disponibles">Datos no disponibles</string>
    <string name="no_login">No se pueden sincronizar datos. Comprueba tu conexión a internet, cierra sesión y vuelve a iniciar sesión para comenzar.</string>
    <string name="no_connection">sin conexión</string>
    <string name="descripcion_curso">Breve descripción del curso</string>
    <string name="numero_de_lecciones">Lecciones: %1$d</string>
    <string name="nombre_del_curso"><b>Nombre del curso</b></string>
    <string name="leccion"><b>Leccion %1$d</b></string>
    <string name="jugar">JUGAR</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae velit vel risus suscipit efficitur non sit amet leo. Mauris commodo ipsum vel dui efficitur, id egestas orci posuere. Vestibulum non ante semper risus scelerisque laoreet. Etiam nec metus et libero porttitor blandit at nec nibh. Mauris et accumsan turpis. Pellentesque porttitor ante vulputate, luctus est at, euismod nisi. Etiam et dui hendrerit, pulvinar tortor at, rutrum nisi. Morbi eu sodales turpis, ut ornare ante. Sed placerat felis vitae lorem dapibus, vitae fringilla quam scelerisque. Vivamus maximus sem vestibulum felis mollis, viverra accumsan nisl molestie. Sed id placerat orci, quis finibus tortor. Donec non diam a felis molestie vulputate at tristique orci. Suspendisse at mi at dui mattis rhoncus. Maecenas a orci varius, mollis neque in, tincidunt ligula. Curabitur ante quam, suscipit quis dui quis, dapibus eleifend odio. Praesent luctus dolor sit amet nisl ultricies, non gravida leo suscipit.</string>
    <string name="sincronizar_sesion">Sincronizar Sesión</string>

    <!-- Strings de juego -->
    <string name="skip">Saltar intento</string>
    <string name="submit">Aprobar intento</string>
    <string name="instructions">Reordena la palabra que se muestra para poder ganar puntos y pasar. lee los detalles justo bajo de ella para poder decifrarla.</string>
    <string name="enter_your_word">Escribe aquí la palabra ordenada</string>
    <string name="try_again">¡Intentalo de nuevo!</string>
    <string name="better_next_time">No has pasado, ¡más suerte para la próxima!</string>
    <string name="congratulations">¡Felicitaciones, has pasado!</string>
    <string name="you_scored">¡Has ganado %1$d puntos!. La media para pasar es %2$d </string>
    <string name="exit">Salir</string>
    <string name="imagen_de_fondo">Imágen de fondo</string>
    <string name="word_count">%1$d de %2$d</string>
    <string name="current_score">Puntos acumulados: %1$d</string>

    <!-- Strings de datos obtenidos -->
    <string name="stat_tab_contents"><b>Progreso:</b> %1$s \n\n<b>Ultima leccion:</b> %2$s \n\n<b>Maxima puntuacion obtenida:</b> %3$s</string>
    <string name="profile_contents"><b>Cursos activos:</b> %1$s \n\n<b>lecciones totales aprobadas:</b> %2$s \n\n<b>Es autor:</b> %3$s </string>


</resources>