<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home_fragment">
    <fragment
        android:id="@id/home_fragment"
        android:name="augusto.hernandez.escuelaarcade.home.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/home_fragment"/>
    <fragment
        android:id="@id/profile_fragment"
        android:name="augusto.hernandez.escuelaarcade.profile.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/profile_fragment"/>
    <fragment
        android:id="@id/statistics_fragment"
        android:name="augusto.hernandez.escuelaarcade.statistics.StatisticsFragment"
        android:label="@string/statistics_fragment"
        tools:layout="@layout/statistics_fragment"/>
</navigation>