<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:strokeWidth="1dp"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/design_default_color_secondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/courseImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"
       />

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nombre_del_curso"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/courseImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/courseLessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/numero_de_lecciones"
            android:padding="8dp"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintStart_toEndOf="@id/courseImage"
            app:layout_constraintTop_toBottomOf="@id/courseTitle" />

        <TextView
            android:id="@+id/courseDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:text="@string/descripcion_curso"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/courseImage"
            app:layout_constraintTop_toBottomOf="@id/courseLessons" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>