<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="app"
            type="augusto.hernandez.escuelaarcade.navigation.MainActivity" />
        <variable
            name="dataModel"
            type="augusto.hernandez.escuelaarcade.model.AppViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".MainActivity">

        <!-- Main content -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Toolbar -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="?attr/colorOnPrimary"
                android:fitsSystemWindows="true"
                app:title="@string/app_name" />

            <!-- Add your main content here -->

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:defaultNavHost="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navGraph="@navigation/main_nav_graph" />

            <include android:id="@+id/no_connection"
                layout="@layout/no_data_layout"
                android:visibility="gone"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <!-- Navigation view -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"

            android:layout_gravity="start">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profileFrameBackground"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/profileData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp">

                    <ImageView
                        android:id="@+id/backgroundPicture"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:alpha="0.5"
                        android:contentDescription="@string/imagen_de_fondo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        app:layout_constraintBottom_toTopOf="@id/profileFrameImage"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="36sp"
                        android:id="@+id/profilaFrameName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{dataModel.user.perfil.nombre}"
                        tools:text="Augusto"/>
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/profileFrameImage"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:maxHeight="150dp"
                        android:maxWidth="150dp"
                        app:cardCornerRadius="30dp"
                        app:cardPreventCornerOverlap="false">
                        <ImageView
                            app:imageUrl="@{dataModel.user.perfil.foto_de_perfil}"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            tools:src="@tools:sample/backgrounds/scenic"
                            android:contentDescription="@null" />
                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.navigation.NavigationView
                    android:id="@+id/nav_view"
                    android:fitsSystemWindows="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu="@menu/navigation_menu" />
                <Button
                    android:id="@+id/cerrar_sesion"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->app.cerrarSesion()}"
                    android:text="@string/cerrar_sesion"/>
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>